<resources>
    <string name="app_name">Sunnahku</string>
    <string name="yuk_berinfaq">Yuk BerInfaq</string>
    <string name="dalil_infaq">“Janganlah engkau menyimpan harta (tanpa mensedekahkannya). Jika tidak, maka Allah akan menahan rizki untukmu.” [HR. Bukhari]</string>
    <string name="grup_halaqoh">Gabung Grup Halaqoh Yuk!</string>
    <string name="desc_grup_halaqoh">Agar kalian dapat terhubung dengan para penghafal lainnya dan mendapatkan mentor yang bagus, ikutan grup halaqoh aja!</string>
    <string name="kajian_millenial">Kajian Millenial</string>
    <string name="desc_info_kajian">Yuk! Simak kegiatan kajian Millenial bersama Syaikh Utsman Al-Khamis di Masjid Istiqlal Jakarta.</string>
    <string name="yuk_zakat">Yuk Zakat!</string>
    <string name="desc_info_zakat">Bingung mau zakat dimana? Jawabannya ya di Baznas! Sesuai dengan Syariah!</string>
    <string name="content_txt_image_artikel">Image Poster Detail Artikel</string>
    <string name="txt_sunnah_qauliyah"><![CDATA[Sunnah-sunnah Qauliyah Dzikir & Doa Sholat]]></string>
    <string name="txt_dzikir_setiap_saat">Dzikir Setiap Saat</string>
    <string name="txt_dzikir_doa_harian"><![CDATA[Dzikir & Doa Harian]]></string>
    <string name="oleh_admin">Oleh : Admin</string>
    <string name="txt_dzikir_pagi_dan_petang">Dzikir Pagi Petang</string>
    <string name="txt_dzikir_doa_sholat_sunnahqauliyah">Dzikir Doa Sholat</string>
    <string name="txt_time">00.00</string>
    <string name="tv_tanggal">MMMM dd, yyyy</string>
    <string name="txt_imsak">Imsak</string>
    <string name="txt_jadwal_sholat">Jadwal Sholat</string>
    <string name="txt_subuh">Subuh</string>
    <string name="txt_dhuha">Dhuha</string>
    <string name="txt_zuhur">Zuhur</string>
    <string name="txt_ashar">Ashar</string>
    <string name="txt_maghrib">Maghrib</string>
    <string name="txt_time_sholat">00.00</string>
    <string name="txt_isya">Isya</string>
    <string name="tv_seputar_islam">Seputar Islam :</string>
    <string-array name="arr_title_artikel">
        <item>Idul Fitri jatuh Pada Tanggal....</item>
        <item>Apakah sutrah termasuk kedalam sunnah?</item>
    </string-array>
    <string-array name="arr_desc_artikel">
        <item>Lebaran Idul Fitri 2023 tinggal menghitung hari. Lebaran Idul Fitri dilaksanakan setelah menjalani puasa Ramadan selama sebulan penuh atau memasuki 1 Syawal 1444 H.Bulan Ramadhan merupakan bulan yang mulia bagi umat Islam. Dalam kalender Hijriyah, bulan Ramadhan adalah bulan kesembilan. Bulan ini dianggap sebagai bulan yang suci dan bertabur pahala serta keberkahan.Terlepas dari itu, hari Lebaran Idul Fitri adalah salah satu yang ditunggu-tunggu bagi umat Muslim. Hari kemenangan ini menjadi momentum untuk semakin mempererat tali silaturahmi, baik bersama keluarga, kerabat, maupun sahabat.Pimpinan Pusat (PP) Muhammadiyah telah menetapkan 1 Syawal 1444 H jatuh pada tanggal 21 April 2023 atau bertepatan dengan hari Jumat. Penetapannya sudah dituangkan dalam Maklumat Pimpinan Pusat Muhammadiyah No.1/MLM/I.0/E/2023 tentang Penetapan Hasil Hisab, Ramadan, Syawal, dan Zulhijah 1444 H.Dari hasil hisab Muhammadiyah, ijtimak jelang Syawal 1444 H terjadi pada pukul 11.15.06 WIB di hari ke-29 Ramadan. Wujud hilal sudah terlihat ketika Matahari terbenam di Yogyakarta dan pada saat itu Bulan berada di atas ufuk di seluruh wilayah Indonesia.Adapun hasil hisab lainnya, menetapkan 1 Ramadhan 1444 H jatuh pada hari Kamis Pon, 23 Maret 2023 Miladia, 1 Syawal 1444 H jatuh pada hari Jumat Pahing, 21 April 2023 Miladia, dan 1 Dzulhijjah 1444 H jatuh pada hari Senin Legi, 19 Juni 2023 Miladia.Penetapan Hari Raya Idul Fitri 2023 atau Lebaran versi pemerintah masih belum ditentukan. Pemerintah masih akan menggelar sidang isbat dengan melaksanakan rukyatul hilal.Sidang isbat penentuan 1 Syawal 1444 H akan dilaksanakan melibatkan berbagai pihak, seperti Majelis Ulama Indonesia (MUI), Komisi VIII DPR, serta sejumlah perwakilan organisasi masyarakat (ormas) Islam lainnya.Sementara dalam kalender hijriah yang disusun Kemenag, Lebaran Idul Fitri 2023 diperkirakan jatuh pada Sabtu, 22 April 2023.Sama dengan pemerintah, Nahdlatul Ulama (NU) juga masih menunggu sidang isbat untuk penetapan 1 Syawal 1444 H. NU akan ikut bersama MUI, Komisi VIII DPR, hingga ormas Islam lainnya dalam penetapan 1 Syawal nanti.</item>
        <item>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</item>
    </string-array>
    <string-array name="arr_dzikir_doa_harian">
        <item>Sebelum tidur</item>
        <item>Ketika mimpi buruk</item>
        <item>Bangun tidur</item>
        <item>Masuk WC/kamar mandi</item>
        <item>Keluar WC/kamar mandi</item>
        <item>Sebelum wudhu</item>
        <item>Setelah wudhu</item>
        <item>Mengenakan pakaian</item>
        <item>Melepas pakaian</item>
        <item>Keluar rumah</item>
        <item>Masuk rumah</item>
        <item>Pergi ke Masjid</item>
        <item>Masuk ke Masjid</item>
        <item>Keluar dari Masjid</item>
        <item>Ketika mendengar Adzan</item>
        <item>Setelah adzan</item>
        <item>Bersin</item>
        <item>Kepada orang yang berbuat baik kepadamu</item>
        <item>Ketika marah</item>
    </string-array>
    <string-array name="arr_lafaz_dzikir_doa_harian">
        <item>Mengumpulkan dua telapak tangan, lalu ditiup dan dibacakan:\n\nSurat Al-Ikhlas:\nبِسْمِ اللَّهِ الرَّحْمَٰنِ الرَّحِيمِ \nقُلْ هُوَ اللَّهُ أَحَدٌ ﴿١﴾ اللَّهُ الصَّمَدُ ﴿٢﴾ لَمْ يَلِدْ وَلَمْ يُولَدْ ﴿٣﴾ وَلَمْ يَكُنْ لَهُ كُفُوًا أَحَدٌ ﴿٤﴾ \n\nSurat Al-Falaq:\nبِسْمِ اللَّهِ الرَّحْمَٰنِ الرَّحِيمِ \nقُلْ اَعُوْذُ بِرَبِّ الْفَلَقِۙ ﴿١﴾ مِنْ شَرِّ مَا خَلَقَۙ ﴿٢﴾ وَمِنْ شَرِّ غَاسِقٍ اِذَا وَقَبَۙ ﴿٣﴾ وَمِنْ شَرِّ النَّفّٰثٰتِ فِى الْعُقَدِۙ ﴿٤﴾ وَمِنْ شَرِّ حَاسِدٍ اِذَا حَسَدَ ﴿٥﴾ \n\nAn-Naas:\nبِسْمِ اللَّهِ الرَّحْمَٰنِ الرَّحِيمِ \nقُلْ اَعُوْذُ بِرَبِّ النَّاسِۙ ﴿١﴾ مَلِكِ النَّاسِۙ ﴿٢﴾ اِلٰهِ النَّاسِۙ ﴿٣﴾ مِنْ شَرِّ الْوَسْوَاسِ ەۙ الْخَنَّاسِۖ ﴿٤﴾ الَّذِيْ يُوَسْوِسُ فِيْ صُدُوْرِ النَّاسِۙ ﴿٥﴾ مِنَ الْجِنَّةِ وَالنَّاسِ ﴿٦﴾\nAyat Kursi:\nٱللَّهُ لَآ إِلَٰهَ إِلَّا هُوَ ٱلْحَىُّ ٱلْقَيُّومُ ۚ لَا تَأْخُذُهُۥ سِنَةٌ وَلَا نَوْمٌ ۚ لَّهُۥ مَا فِى ٱلسَّمَٰوَٰتِ وَمَا فِى ٱلْأَرْضِ ۗ مَن ذَا ٱلَّذِى يَشْفَعُ عِندَهُۥٓ إِلَّا بِإِذْنِهِۦ ۚ يَعْلَمُ مَا بَيْنَ أَيْدِيهِمْ وَمَا خَلْفَهُمْ ۖ وَلَا يُحِيطُونَ بِشَىْءٍ مِّنْ عِلْمِهِۦٓ إِلَّا بِمَا شَآءَ ۚ وَسِعَ كُرْسِيُّهُ ٱلسَّمَٰوَٰتِ وَٱلْأَرْضَ ۖ وَلَا يَـُٔودُهُۥ حِفْظُهُمَا ۚ وَهُوَ ٱلْعَلِىُّ ٱلْعَظِيمُ\nKetika sudah berbaring baca doa:\nاَللَّهُمَّ أَسْلَمْتُ نَفْسِيْ إِلَيْكَ، وَفَوَّضْتُ أَمْرِيْ إِلَيْكَ، وَوَجَّهْتُ وَجْهِيَ إِلَيْكَ، وَأَلْجَأْتُ ظَهْرِيْ إِلَيْكَ، رَغْبَةً وَرَهْبَةً إِلَيْكَ، لاَ مَلْجَأَ وَلاَ مَنْجَا مِنْكَ إِلاَّ إِلَيْكَ، آمَنْتُ بِكِتَابِكَ الَّذِيْ أَنْزَلْتَ وَبِنَبِيِّكَ الَّذِيْ أَرْسَلْتَ\n\nبِاسْمِكَ رَبِّيْ وَضَعْتُ جَنْبِيْ، وَبِكَ أَرْفَعُهُ، فَإِنْ أَمْسَكْتَ نَفْسِيْ فَارْحَمْهَا، وَإِنْ أَرْسَلْتَهَا فَاحْفَظْهَا بِمَا تَحْفَظُ بِهِ عِبَادَكَ الصَّالِحِيْنَ</item>
        <item>Membaca isti\'adzah:\nأَعُوذُ بِاَللَّهِ مِنَ الشَّيْطَانِ الرَّجِيمِْ\nlalu meludah tipis (meniup disertai sedikit liur) ke sebelah kirinya sebanyak tiga kali.\nDemikian juga merubah posisi tidur. Bahkan dianjurkan untuk bangun dan shalat.</item>
        <item>الحَمْدُ ِللهِ الَّذِي أَحْيَاناَ بَعْدَ مَا أَمَاتَنَا وَ إِلَيْهِ النُّشُوْرُ</item>
        <item>اللَّهُمَّ إِنِّى أَعُوذُ بِكَ مِنَ الْخُبُثِ وَالْخَبَائِثِ</item>
        <item>غُفْرَانَكَ</item>
        <item>بسم الله</item>
        <item>Pertama:\nأَشْهَدُ أَنْ لاَ إِلهَ إِلاَّ اللهُ وَحْدَهُ لاَ شَرِيْكَ لَهُ وَأَشْهَدُ أَنَّ مُحَمَّدًا عَبْدُهُ وَرَسُوْلُهُ\n\nKedua:\nسُبْحَانَكَ اللَّهُمَّ وَبِحَمْدِكَ، أَشْهَدُ أَنْ لاَ إِلَـهَ إِلاَّ أَنْتَ، أَسْتَغْفِرُكَ وَأَتُوْبُ إِلَيْكَ</item>
        <item>اَلْحَمْدُ لِلَّهِ الَّذِيْ كَسَانِيْ هَذَا الثَّوْبَ وَرَزَقَنِيْهِ مِنْ غَيْرِ حَوْلٍ مِنِّيْ وَلَا قُوَّةٍ</item>
        <item>بسم الله</item>
        <item>بِسْمِ اللهِ تَوَكَّلْتُ عَلَى اللهِ لَا حَوْلَ وَلَا قُوَّةَ إِلَّا بِاللهِ</item>
        <item>Pertama:\nبسم الله\n\Kedua:\nالسلام عليكم</item>
        <item>اللّهُمَّ اجْعَلْ فِي قَلْبِيْ نُوْراً، وَفِي لِسَانِي نُوْراً، وَاجْعَلْ وَفِي سَمْعِي نُوْراً، وَاجْعَلْ فِي بَصَرِي نُوْراً، وَاجْعَلْ مِنْ خَلْفِي نُوْراً، وَمِنْ أَمَامِي نُوْراً، وَاجْعَلْ مِنْ فَوْقِي نُوْراً، وَمِنْ تَحْتِي نُوْراً، اللّهُمَّ أَعْطِنِي نُوْراً</item>
        <item>Pertama:\nاللَّهُمَّ افْتَحْ لِي أَبْوَابَ رَحْمَتِكَ\n\nKedua:\nوَالصَّلَاةُ وَالسَّلاَمُ عَلَى رَسُولِ اللهِ اللَّهُمَّ افْتَحْ لِي أَبْوَابَ رَحْمَتِكَ\n\nKetiga:\nأَعُوذُ بِاللَّهِ الْعَظِيمِ، وَبِوَجْهِهِ الْكَرِيمِ، وَسُلْطَانِهِ الْقَدِيمِ، مِنَ الشَّيْطَانِ الرَّجِيمِ</item>
        <item>اللَّهُمَّ إِنِّيْ أَسْأَلُكَ مِنْ فَضْلِكَ</item>
        <item>Seseorang yang mendengarkan adzan, hendaklah mengucapkan sebagaimana yang diucapkan oleh muadzin, kecuali dalam kalimat:\nHayya \'alash shalaah\n\ndan\n\nHayya \'alal falaah. Maka mengucapkan:\nلاحول ولا قوة الا بالله</item>
        <item>اللَّهُمَّ رَبَّ هَذِهِ الدَّعْوَةِ التَّامَّةِ ، وَالصَّلاَةِ القَائِمَةِ آتِ مُحَمَّدًا الوَسِيلَةَ وَالفَضِيلَةَ، وَابْعَثْهُ مَقَامًا مَحْمُودًا الَّذِي وَعَدْتَهُ</item>
        <item>Yang bersin mengucapkan:\nالحمد لله\nYang mendengar hamdalah mengucapkan:\nيَرْحَمُكَ اللهُ\nBila teman atau saudaranya mengucapkan (yarhamukallah), maka yang bersin membalas dengan:\nيَهْدِيْكُمُ اللهُ وَيُصْلِحُ بَالَكُمْ</item>
        <item>جزاك الله خيراً</item>
        <item>أَعُوذُ بِاللَّهِ مِنَ الشَّيْطَانِ الرَّجِيمِ</item>
    </string-array>
</resources>