<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.JadwalSholatActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/iv_jadwaladzan"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:scaleType="fitXY"
            android:src="@drawable/bg_top_jadwaladzan"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextClock
            android:id="@+id/tv_jam"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="15dp"
            android:text="@string/txt_time"
            android:textColor="@color/white"
            android:textSize="40sp"
            app:layout_constraintBottom_toBottomOf="@+id/tv_tanggal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tv_tanggal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/tv_tanggal"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="@id/iv_jadwaladzan"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tv_title_jadwalsholat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/txt_jadwal_sholat"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_jadwaladzan" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/card_imsak"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:backgroundTint="@color/red"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_title_jadwalsholat" >

            <TextView
                android:id="@+id/tv_imsak"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="10dp"
                android:paddingTop="10dp"
                android:paddingEnd="10dp"
                android:text="@string/txt_imsak"
                android:textColor="@color/cream_yellow"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tv_waktu_imsak"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_time_sholat"
                android:textColor="@color/cream_yellow"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:paddingTop="40dp"
                android:textSize="25sp"
                android:textStyle="bold"/>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/card_subuh"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:backgroundTint="@color/red"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/card_imsak" >

            <TextView
                android:id="@+id/tv_subuh"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="10dp"
                android:paddingTop="10dp"
                android:paddingEnd="10dp"
                android:text="@string/txt_subuh"
                android:textColor="@color/cream_yellow"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tv_waktu_subuh"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_time_sholat"
                android:textColor="@color/cream_yellow"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:paddingTop="40dp"
                android:textSize="25sp"
                android:textStyle="bold"/>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/card_dhuha"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:backgroundTint="@color/red"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/card_subuh" >

            <TextView
                android:id="@+id/tv_dhuha"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="10dp"
                android:paddingTop="10dp"
                android:paddingEnd="10dp"
                android:text="@string/txt_dhuha"
                android:textColor="@color/cream_yellow"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tv_waktu_dhuha"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_time_sholat"
                android:textColor="@color/cream_yellow"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:paddingTop="40dp"
                android:textSize="25sp"
                android:textStyle="bold"/>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/card_zuhur"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:backgroundTint="@color/red"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/card_dhuha" >

            <TextView
                android:id="@+id/tv_zuhur"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="10dp"
                android:paddingTop="10dp"
                android:paddingEnd="10dp"
                android:text="@string/txt_zuhur"
                android:textColor="@color/cream_yellow"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tv_waktu_zuhur"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_time_sholat"
                android:textColor="@color/cream_yellow"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:paddingTop="40dp"
                android:textSize="25sp"
                android:textStyle="bold"/>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/card_ashar"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:backgroundTint="@color/red"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/card_zuhur" >

            <TextView
                android:id="@+id/tv_ashar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="10dp"
                android:paddingTop="10dp"
                android:paddingEnd="10dp"
                android:text="@string/txt_ashar"
                android:textColor="@color/cream_yellow"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tv_waktu_ashar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_time_sholat"
                android:textColor="@color/cream_yellow"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:paddingTop="40dp"
                android:textSize="25sp"
                android:textStyle="bold"/>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/card_maghrib"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:backgroundTint="@color/red"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/card_ashar" >

            <TextView
                android:id="@+id/tv_maghrib"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="10dp"
                android:paddingTop="10dp"
                android:paddingEnd="10dp"
                android:text="@string/txt_maghrib"
                android:textColor="@color/cream_yellow"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tv_waktu_maghrib"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_time_sholat"
                android:textColor="@color/cream_yellow"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:paddingTop="40dp"
                android:textSize="25sp"
                android:textStyle="bold"/>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/card_isya"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:backgroundTint="@color/red"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/card_maghrib" >

            <TextView
                android:id="@+id/tv_isya"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="10dp"
                android:paddingTop="10dp"
                android:paddingEnd="10dp"
                android:text="@string/txt_isya"
                android:textColor="@color/cream_yellow"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tv_waktu_isya"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_time_sholat"
                android:textColor="@color/cream_yellow"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:paddingTop="40dp"
                android:textSize="25sp"
                android:textStyle="bold"/>

        </com.google.android.material.card.MaterialCardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>